# vxsweet

./: .bazelignore  .bazelrc  .env  .gitignore  .playwright  .prettierrc.mjs  BUILD.bazel  Cargo.toml  Dockerfile  MODULE.bazel  README.md  REPO.bazel  WORKSPACE.bazel  compose.yaml  env.d.ts  esbuild-runner.config.js  eslint.config.mjs  go.mod  go.sum  jest-styled-components.d.ts  jest.config.js  package.json  package_list.json  pnpm-lock.yaml  tsconfig.json
apps/admin/: BUILD.bazel
apps/admin/backend/: BUILD.bazel
apps/admin/backend/adjudication/: BUILD.bazel  adjudication.test.ts  adjudication.ts
apps/admin/backend/app/: BUILD.bazel  app.auth.test.ts  app.ballot_count_report_csv.test.ts  app.ballot_count_report_data.test.ts  app.ballot_count_report_pdf.test.ts  app.caching.test.ts  app.cvr_files.test.ts  app.diagnostics.test.ts  app.err_cdf_export.test.ts  app.manual_results.test.ts  app.tally_report_csv.test.ts  app.tally_report_data.test.ts  app.tally_report_pdf.test.ts  app.test.ts  app.ts  app.write_in_adjudication_report_pdf.test.ts  (+1 more)
apps/admin/frontend/: BUILD.bazel  index.html  vite.config.ts
apps/admin/integration-testing/: .env  BUILD.bazel
apps/central-scan/: BUILD.bazel
apps/central-scan/backend/: BUILD.bazel  main.ts
apps/central-scan/frontend/: BUILD.bazel  index.html  index.tsx  vite.config.ts
apps/central-scan/integration-testing/: BUILD.bazel
apps/design/: BUILD.bazel
apps/design/backend/: BUILD.bazel  main.ts
apps/design/frontend/: BUILD.bazel  index.html  index.tsx  vite.config.ts
apps/mark/: BUILD.bazel
apps/mark-scan/: BUILD.bazel
apps/mark-scan/accessible-controller/: BUILD.bazel
apps/mark-scan/backend/: BUILD.bazel  main.ts
apps/mark-scan/daemon-utils/: BUILD.bazel
apps/mark-scan/fai-100-controller/: BUILD.bazel
apps/mark-scan/frontend/: BUILD.bazel  index.html  index.tsx  vite.config.ts
apps/mark-scan/integration-testing/: .env  BUILD.bazel
apps/mark-scan/pat-device-input/: BUILD.bazel
apps/mark/backend/: BUILD.bazel  main.ts
apps/mark/frontend/: BUILD.bazel  index.tsx  vite.config.ts
apps/mark/integration-testing/: .env  BUILD.bazel
apps/scan/: BUILD.bazel
apps/scan/backend/: BUILD.bazel  index.ts  main.ts
apps/scan/frontend/: BUILD.bazel  index.html  index.tsx  vite.config.ts
libs/ballot-interpreter/: BUILD.bazel
libs/ballot-interpreter/benchmarks/: BUILD.bazel  benchmarking.ts  interpret_bmd.bench.ts  interpret_hmpb.bench.ts
libs/ballot-interpreter/e2e/: BUILD.bazel  interpret_all_bubble_ballot.test.ts  interpret_and_save_files.test.ts  interpret_bmd_and_hmp_ballots.test.ts  interpret_bmd_ballots.test.ts  interpret_nh_hmpb.test.ts  interpret_vx_hmpb.test.ts
libs/ballot-interpreter/src/: BUILD.bazel  adjudication_reasons.test.ts  adjudication_reasons.ts  interpret.ts  interpret_all_bubble_ballot.test.ts  interpret_and_save_files.test.ts  interpret_bmd_and_hmp_ballots.test.ts  interpret_bmd_ballots.test.ts  interpret_nh_hmpb.test.ts  interpret_vx_hmpb.test.ts  save_images.test.ts  save_images.ts  types.ts  validation.test.ts  validation.ts
libs/ballot-interpreter/test/: BUILD.bazel
libs/ballots/: BUILD.bazel  codec.go
libs/datetime/: BUILD.bazel  timestamp.go  timestamp_test.go
libs/fixtures/: BUILD.bazel  build_resources.sh
libs/fixtures/data/: systemSettings.json
libs/fixtures/src/: BUILD.bazel  index.test.ts  index.ts  util.ts
libs/fixtures/ui_strings/: BUILD.bazel  ui_strings_package.ts
libs/hmpb/: BUILD.bazel  vite.config.ts
libs/hmpb/go/: BUILD.bazel  all_bubble.go  cfg.go  cfg_all_bubble.go  cfg_base.go  cfg_nh.go  codec.go  codec_test.go  doc.go  grid_only.go  m.go  package_test.go  packager.go  printer.go  printer_test.go  rich_text.go  string_catalog.go
libs/hmpb/src/: BUILD.bazel  all_bubble_ballot_fixtures.tsx  ballot_components.tsx  ballot_fixtures.ts  base_styles.tsx  generate_fixtures.test.ts  generate_fixtures.ts  hmpb_strings.tsx  layout_in_columns.ts  mark_ballot.tsx  playwright_renderer.tsx  render_ballot.tsx  renderer.tsx  vx_default_ballot_template.tsx
libs/hmpb/test/: setupTests.ts
libs/image-test-utils/: BUILD.bazel  jest_match_image.test.ts  jest_match_image.ts  jest_pdf_snapshot.ts  register.ts
libs/libudev-sys/: BUILD.bazel  Cargo.toml  build.rs
libs/libudev-sys/src/: lib.rs
libs/logging/: BUILD.bazel  README.md  VotingWorksLoggingDocumentation.md
libs/logging/scripts/: BUILD.bazel  generate_documentation.ts  generate_rust_enums_from_toml.ts  generate_types_from_toml.ts  types.ts
libs/logging/src/: BUILD.bazel  base_logger.test.ts  base_logger.ts  export.test.ts  export.ts  helpers.ts  log_documentation.test.ts  log_documentation.ts  log_event_ids.ts  logger.test.ts  logger.ts  test_utils.test.ts  test_utils.ts  types.ts
libs/pdi-scanner/: BUILD.bazel  Cargo.toml
libs/types-rs/: BUILD.bazel
script/: BUILD.bazel  build-all.sh  ci_typecheck.sh  dev_env.sh  full_ci.sh  hoist_jest_mocks.ts  install_bazel.sh  lint.sh  package.json  run-dev  tanstack_query_v5.sh  test-all.sh  tsconfig.json  typecheck.sh  validate-monorepo
script/src/: BUILD.bazel  combine_package_jsons.ts
script/src/build-stubs/: BUILD.bazel  index.ts
script/src/prod-build/: BUILD.bazel  build.ts  deps.ts  index.ts  pnpm.ts
script/src/run-dev/: BUILD.bazel  index.ts
script/src/validate-monorepo/: BUILD.bazel  cli.ts
tools/eslint/: BUILD.bazel  checker.sh.template  config.ts  eslint_test.bzl  fix.sh
tools/eslint/checker/: BUILD.bazel  checker.ts
tools/eslint/formatter/: BUILD.bazel  formatter.ts
tools/eslint/worker/: BUILD.bazel  worker.ts
tools/gazelle/: BUILD.bazel  go-tidy.sh  update-deps.sh
tools/gazelle/ts/: BUILD.bazel  configure.go  generate.go  kinds.go  language.go  parse.go  parser.go  resolve.go
tools/jest/: BUILD.bazel  config.ts  jest_test.bzl  patch_styled_components.ts  setup_dom.ts  setup_node.ts  transform.ts  watch.sh
tools/multirun/: BUILD.bazel  defs.bzl  run_concurrently.ts
tools/playwright/: BUILD.bazel  config.ts  version.json  version.test.ts
tools/tsc/: BUILD.bazel
tools/vite/: BUILD.bazel  config.ts
(+3372 files in other folders)
