load("//tools/ts_build:ts_library.bzl", "ts_library")

exports_files(
    srcs = [
        "bootstrap",
        "build-all.sh",
        "build-stubs",
        "prod-build",
        "run-dev",
        "test-all.sh",
        "update-go-builds.sh",
        "update-ts-builds.sh",
    ],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "script",
    deps = ["//:node_modules/@types/node"],
)
