load("//tools/apps:dev_app.bzl", "dev_app")
load("//tools/apps:prod_app.bzl", "prod_app")

prod_app(
    name = "prod",
    backend_entry_point = "//apps/admin/backend/src:main.js",
    backend_src = "//apps/admin/backend/src",
    default_port = "3000",
    frontend_bundle = "//apps/admin/frontend:bundle",
    static_file_dir = "//apps/admin/frontend/build",
    vx_machine_type = "admin",
)

dev_app(
    name = "dev",
    backend_server = "//apps/admin/backend:dev_server",
    frontend_server = "//apps/admin/frontend:dev_server",
    tags = ["manual"],
)
