load("//tools/apps:dev_app.bzl", "dev_app")
load("//tools/apps:prod_app.bzl", "prod_app")
load("//tools/apps:prod_archive.bzl", "prod_archive")

prod_archive(
    name = "archive",
    archive_name = "VxAdmin",
    server = "//apps/admin/backend/src",
    ui_bundle = "//apps/admin/frontend:bundle",
)

prod_app(
    name = "prod",
    additional_env_vars = {
        "ADMIN_WORKSPACE": "$${BUILD_WORKSPACE_DIRECTORY}/apps/admin/backend/dev-workspace",
        "REACT_APP_VX_DEV": "TRUE",
    },
    backend_entry_point = "//apps/admin/backend/src:main.js",
    backend_src = "//apps/admin/backend/src",
    default_port = "3000",
    frontend_bundle = "//apps/admin/frontend:bundle",
    static_file_dir = "//apps/admin/frontend/build",
    vx_machine_type = "admin",
)

prod_app(
    name = "integration",
    additional_env_vars = {
        "ADMIN_WORKSPACE": "$${TEST_TMPDIR-.}/apps/admin/backend/dev-workspace",
    },
    backend_entry_point = "//apps/admin/backend/src:main.js",
    backend_src = "//apps/admin/backend/src",
    default_port = "3000",
    frontend_bundle = "//apps/admin/frontend:bundle",
    static_file_dir = "//apps/admin/frontend/build",
    vx_machine_type = "admin",
)

dev_app(
    name = "dev",
    backend_server = "//apps/admin/backend:dev_server",
    frontend_server = "//apps/admin/frontend:dev_server",
)
