load("//tools/apps:dev_app.bzl", "dev_app")
load("//tools/apps:prod_app.bzl", "prod_app")

prod_app(
    name = "prod",
    backend_entry_point = "//apps/central-scan/backend/src:main.js",
    backend_src = "//apps/central-scan/backend/src",
    default_port = "3000",
    frontend_bundle = "//apps/central-scan/frontend:bundle",
    vx_machine_type = "central-scan",
)

dev_app(
    name = "dev",
    backend_server = "//apps/central-scan/backend:dev_server",
    frontend_server = "//apps/central-scan/frontend:dev_server",
    tags = ["manual"],
)
