load("//tools/apps:dev_app.bzl", "dev_app")
load("//tools/apps:prod_app.bzl", "prod_app")

prod_app(
    name = "prod",
    backend_entry_point = "//apps/design/backend:main.js",
    backend_src = "//apps/design/backend",
    default_port = "3000",
    frontend_bundle = "//apps/design/frontend:bundle",
    static_file_dir = "//apps/design/frontend/build",
    vx_machine_type = "design",
)

dev_app(
    name = "dev",
    backend_server = "//apps/design/backend:dev_server",
    frontend_server = "//apps/design/frontend:dev_server",
    tags = ["manual"],
)
