load("//tools/apps:dev_app.bzl", "dev_app")
load("//tools/apps:prod_app.bzl", "prod_app")
load("//tools/apps:prod_archive.bzl", "prod_archive")

prod_archive(
    name = "archive",
    archive_name = "VxMarkScan-150",
    server = "//apps/mark-scan/backend",
    ui_bundle = "//apps/mark-scan/frontend:bundle",
    deps = [
        "//apps/mark-scan/fai-100-controller",
    ],
)

prod_archive(
    name = "archive_155",
    archive_name = "VxMarkScan-155",
    server = "//apps/mark-scan/backend",
    ui_bundle = "//apps/mark-scan/frontend:bundle",
    deps = [
        "//apps/mark-scan/accessible-controller",
        "//apps/mark-scan/pat-device-input",
    ],
)

prod_app(
    name = "prod",
    additional_env_vars = {
        "MARK_SCAN_WORKSPACE": "$${BUILD_WORKSPACE_DIRECTORY}/apps/mark-scan/backend/dev-workspace",
    },
    backend_entry_point = "//apps/mark-scan/backend:main.js",
    backend_src = "//apps/mark-scan/backend",
    default_port = "3000",
    frontend_bundle = "//apps/mark-scan/frontend:bundle",
    static_file_dir = "//apps/mark-scan/frontend/build",
    vx_machine_type = "mark-scan",
)

prod_app(
    name = "integration",
    additional_env_vars = {
        "MARK_SCAN_WORKSPACE": "$${TEST_TMPDIR-.}/apps/mark-scan/backend/dev-workspace",
    },
    backend_entry_point = "//apps/mark-scan/backend:main.js",
    backend_src = "//apps/mark-scan/backend",
    default_port = "3000",
    frontend_bundle = "//apps/mark-scan/frontend:bundle",
    static_file_dir = "//apps/mark-scan/frontend/build",
    vx_machine_type = "mark-scan",
)

dev_app(
    name = "dev",
    backend_server = "//apps/mark-scan/backend:dev_server",
    frontend_server = "//apps/mark-scan/frontend:dev_server",
)
