load("//tools/apps:dev_app.bzl", "dev_app")
load("//tools/apps:prod_app.bzl", "prod_app")

prod_app(
    name = "prod",
    backend_entry_point = "//apps/mark/backend/src:main.js",
    backend_src = "//apps/mark/backend/src",
    default_port = "3000",
    frontend_bundle = "//apps/mark/frontend:bundle",
    vx_machine_type = "mark",
)

dev_app(
    name = "dev",
    backend_server = "//apps/mark/backend:dev_server",
    frontend_server = "//apps/mark/frontend:dev_server",
    tags = ["manual"],
)
