load("//tools/apps:dev_app.bzl", "dev_app")
load("//tools/apps:prod_app.bzl", "prod_app")
load("//tools/apps:prod_archive.bzl", "prod_archive")

prod_archive(
    name = "archive",
    archive_name = "VxMark",
    server = "//apps/mark/backend",
    ui_bundle = "//apps/mark/frontend:bundle",
)

prod_app(
    name = "prod",
    additional_env_vars = {
        "MARK_WORKSPACE": "$${BUILD_WORKSPACE_DIRECTORY}/apps/mark/backend/dev-workspace",
    },
    backend_entry_point = "//apps/mark/backend:main.js",
    backend_src = "//apps/mark/backend",
    default_port = "3000",
    frontend_bundle = "//apps/mark/frontend:bundle",
    static_file_dir = "//apps/mark/frontend/build",
    vx_machine_type = "mark",
)

prod_app(
    name = "integration",
    additional_env_vars = {
        "MARK_WORKSPACE": "$${TEST_TMPDIR-.}/apps/mark/backend/dev-workspace",
    },
    backend_entry_point = "//apps/mark/backend:main.js",
    backend_src = "//apps/mark/backend",
    default_port = "3000",
    frontend_bundle = "//apps/mark/frontend:bundle",
    static_file_dir = "//apps/mark/frontend/build",
    vx_machine_type = "mark",
)

dev_app(
    name = "dev",
    backend_server = "//apps/mark/backend:dev_server",
    frontend_server = "//apps/mark/frontend:dev_server",
)
