load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "datetime",
    srcs = ["timestamp.go"],
    importpath = "github.com/kofi-q/vxsweet/libs/datetime",
    visibility = ["//visibility:public"],
)

go_test(
    name = "datetime_test",
    size = "small",
    srcs = ["timestamp_test.go"],
    embed = [":datetime"],
    deps = ["@com_github_stretchr_testify//require"],
)
