load("@aspect_rules_js//js:defs.bzl", "js_library")

DATA_FILE_EXTENSIONS = [
    "csv",
    "jpeg",
    "jpg",
    "json",
    "jsonl",
    "pdf",
    "png",
    "txt",
    "xml",
    "vxsig",
    "zip",
]

DATA_FILES = glob(
    [
        "data/**/*.{}".format(ext)
        for ext in DATA_FILE_EXTENSIONS
    ],
    allow_empty = True,
)

js_library(
    name = "data",
    data = [
        "//libs/fixtures/data/electionFamousNames2021:data",
        "//libs/fixtures/data/electionGeneral:data",
        "//libs/fixtures/data/electionGridLayoutNewHampshireHudson:data",
        "//libs/fixtures/data/electionGridLayoutNewHampshireTestBallot:data",
        "//libs/fixtures/data/electionMultiPartyPrimary:data",
        "//libs/fixtures/data/electionPrimaryPrecinctSplits:data",
        "//libs/fixtures/data/electionTwoPartyPrimary:data",
        "//libs/fixtures/data/electionWithMsEitherNeither:data",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

exports_files(
    DATA_FILES,
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "generate",
    srcs = ["build_resources.sh"],
    data = [
        "//libs/res-to-ts/src:cli",
    ],
    env = {
        "RES_TO_TS_PATH": "$(rootpath //libs/res-to-ts/src:cli)",
    },
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
