load("//tools/ts_build:ts_library.bzl", "ts_library")
load("//tools/ts_build:ts_tests.bzl", "ts_tests")

ts_library(
    name = "image-test-utils",
    deps = [
        "//:node_modules/@types/jest",
        "//:node_modules/@types/jest-image-snapshot",
        "//:node_modules/@types/node",
        "//:node_modules/@types/pixelmatch",
        "//:node_modules/@types/testing-library__jest-dom",
        "//:node_modules/canvas",
        "//:node_modules/jest-image-snapshot",
        "//:node_modules/pixelmatch",
        "//libs/basics/src",
        "//libs/image-utils/src",
        "//libs/utils/src",
    ],
)

ts_tests(
    name = "tests",
    tmp_enable_tests = True,
    deps = [
        "//:node_modules/@types/jest",
        "//:node_modules/@types/node",
        "//:node_modules/@types/testing-library__jest-dom",
        "//:node_modules/canvas",
        "//libs/fixtures/src",
        "//libs/image-test-utils",
        "//libs/image-utils/src",
    ],
)
