load("//tools/ts_build:lint_test.bzl", "lint_test")
load("//tools/ts_build:ts_library.bzl", "ts_library")
load("//tools/ts_build:ts_tests.bzl", "ts_tests")

ts_library(
    name = "image-test-utils",
    deps = [
        "//:node_modules/@types/jest",
        "//:node_modules/@types/jest-image-snapshot",
        "//:node_modules/@types/node",
        "//:node_modules/@types/pixelmatch",
        "//:node_modules/@types/testing-library__jest-dom",
        "//:node_modules/canvas",
        "//:node_modules/jest-image-snapshot",
        "//:node_modules/pixelmatch",
        "//libs/basics/assert",
        "//libs/image-utils/src",
        "//libs/utils/src",
    ],
)

ts_tests(
    name = "tests",
    deps = [
        "//:node_modules/@types/jest",
        "//:node_modules/@types/node",
        "//:node_modules/@types/testing-library__jest-dom",
        "//:node_modules/canvas",
        "//libs/fixtures/src/data/sample-ballot-images",
        "//libs/image-test-utils",
        "//libs/image-utils/src",
    ],
)

lint_test(name = "lint")
