load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "libudev-sys",
    srcs = ["src/lib.rs"],
    crate_name = "libudev_sys",
    tags = ["rust"],
    visibility = ["//visibility:public"],
    deps = [
        ":build_script",
        "@crates//:libc",
    ],
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:libc",
        "@crates//:pkg-config",
    ],
)
