load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rustfmt_test")

rust_library(
    name = "libudev-sys",
    srcs = ["src/lib.rs"],
    crate_name = "libudev_sys",
    tags = ["rust"],
    visibility = ["//visibility:public"],
    deps = [
        ":build_script",
        "@crates//:libc",
    ],
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:libc",
        "@crates//:pkg-config",
    ],
)

rust_clippy(
    name = "clippy",
    testonly = True,
    deps = [
        ":libudev-sys",
    ],
)

rustfmt_test(
    name = "rustfmt",
    targets = [
        ":libudev-sys",
    ],
)
