[package]
name = "libudev-sys"
version = "0.1.4"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "FFI bindings to libudev"
license = "MIT"
homepage = "https://github.com/dcuddeback/libudev-sys"
repository = "https://github.com/dcuddeback/libudev-sys"

build = "build.rs"
links = "libudev"

[dependencies]
libc = { workspace = true }

[build-dependencies]
pkg-config = "0.3.2"
